--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,3 +16,13 @@ spring:
         format_sql: true
         dialect: org.hibernate.dialect.MySQL8Dialect
     defer-datasource-initialization: true
+  data:
+    redis:
+      host: localhost
+      port: 6379
+      password: 1234
+      timeout: 3s
+
+  redis:
+    redisson:
+      file: classpath:redisson.yml
