test: coupon 발급 분산락 테스트
1.레디스 테스트 관련 설정
- redis가 필요 없는 기존 통합 테스트에서는 환경 변수를 통해 RedissonClient 빈을 만들 때 redis와 통신하지 않는 목 빈을 작성
- redis 관련 테스트는 testcontainer를 통해 redis 컨테이너를 띄우고면서 연결 관련 정보를 환경 변수로 매핑한 후  redissonClient 해당 환경 변수를 통해 redis와 통신함.

2.분산락이 제대로 적용되는지 멀티 스레드 환경에서 동시에 접근하는 스레드의 수를 측정해서 락을 통한 직렬화 검증.

3.긴 waitTime을 통해 락 대기 예외가 터지는지 검증하는 테스트 추가.

--- a/src/main/resources/redisson.yml
+++ b/src/main/resources/redisson.yml
@@ -1,12 +1,10 @@
 singleServerConfig:
   address: "redis://127.0.0.1:6379"
 
-  password: "1234"
-
   # Redis DB index (기본 0)
   database: 0
 
-  connectionTimeout: 10000 # 연결 시도 제한 시간
+  connectTimeout: 10000 # 연결 시도 제한 시간
   timeout: 3000 # Redis 명령 응답 제한 시간
 
   # 실패 시 재시도
