--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,9 +20,12 @@ spring:
     redis:
       host: localhost
       port: 6379
-      password: 1234
       timeout: 3s
-
   redis:
     redisson:
+      mode: file
       file: classpath:redisson.yml
+
+app:
+  redisson:
+    enabled: true
