--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -17,3 +17,15 @@ spring:
       port: 6379
       timeout: 3s
       database: 15
+  datasource:
+    url: jdbc:mysql://localhost:3307/testdb
+    username: root
+    password: 1234
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+  jpa:
+    show-sql: false
+    hibernate:
+      ddl-auto: create
+
+
